# vacancies_info

./: README.md  main.py  pyproject.toml
data/: vacancies.json
src/: api_vacancies.py  utils.py  vacancy.py  working_with_files.py
tests/: conftest.py  test_api_vacancies.py  test_utils.py  test_vacancy.py  test_working_with_files.py
