[tool.poetry]
name = "vacancies-info"
version = "0.1.0"
description = "Сохраняет вакансии в JSON-файл"
authors = ["Aleksandr Goncharov <potta4edu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
